# dataloger

./: .gitignore  config.yaml  demo.py  pyproject.toml  requirements.txt  sample.yaml
dietpi/: readme.md  sun8i-h3-mcp7940x.dtbo  sun8i-h3-mcp7940x.dtso
src/: __about__.py  analyzers.py  datalogger  dataloggers.py  rtc.py
src/i2c/: __init__.py  smbus.py
src/rtc/: __init__.py
tests/: test_almacenamiento.py  test_analyzers.py  test_datalogger.py  test_weather_underground.py
tests/data/: config.yaml
